Fixed a bug in setting date to day after tomorrow in later. New getTomorrowDate function in DateService.

--- a/frontend/core/src/main/webapp/static/app/base/later.html
+++ b/frontend/core/src/main/webapp/static/app/base/later.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="later-row">
-    <a href class="later-row--left" ng-click="setDateDayAfterTomorrow">day after tomorrow</a>
+    <a href class="later-row--left" ng-click="setDateDayAfterTomorrow()">day after tomorrow</a>
     <a href class="later-row--right" ng-click="setDateTomorrow()">tomorrow</a>
   </div>
 
