--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="row animate-list-item-leave"
-    ng-repeat="item in items | limitTo: currentListLimitTo | orderBy:'modified':true"
+    ng-repeat="item in items | orderBy:'created':true | limitTo: currentListLimitTo"
     list-item="items.length">
       <div class="group-mixed">
         <a href class="group-mixed--middle" swiper-click="openEditor('item', newItem)">
