--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -4,7 +4,8 @@
     <div list-item-add="{transientProperties: {completed: false}}" list-item-add-save="saveTask(newItem)"
     ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
     <div class="row animate-list-item-leave"
-    ng-repeat="task in recentTasks = (tasks | filter:isTaskVisible) | limitTo: currentListLimitTo"
+    ng-repeat="task in recentTasks = (tasks | filter:isTaskVisible) | orderBy:'modified':true
+    | limitTo: currentListLimitTo"
     list-item="recentTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('tasks')"></footer>
