--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -1,4 +1,5 @@
-<form role="form" class="group-mixed swiper-no-swiping animate-checkbox-checking" ng-submit="saveTask(newItem)"
+<form role="form" class="group-mixed swiper-no-swiping animate-checkbox-checking"
+ng-submit="callAndExit(saveTask, newItem)"
 data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
 editable-field-container-clicked-elsewhere="clickedElsewhere()">
   <div class="group-mixed--left">
