--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -1,10 +1,14 @@
-<div class="container-content--outer" ng-if="isFeatureActive('list')" drawer-handle="left">
-  <section class="container-content" scroll-to>
-    <div list>
-      <h2>tasks</h2>
-      <div ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}" ng-bind="task.title"></div>
-    </div>
+<div class="container-content--outer" ng-if="isFeatureActive('list')" list-container drawer-handle="left">
+  <section class="container-content" list>
+    <h2>tasks</h2>
+    <div class="row animate-list-item-leave"
+    ng-repeat="task in listTasks =
+    (tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid} | filter:isTaskVisible)
+    | limitTo: currentListLimitTo"
+    list-item="listTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+    <div list-item-add="{transientProperties: {completed: false, list: list.uuid}}"
+    list-item-add-save="saveTask(newItem)"
+    ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
   </section>
-  <footer class="container-content--after" list-footer="getFeatureMap('list')"
-  list-footer-add-item="addTask({transientProperties: {list:list.uuid}})"></footer>
+  <footer class="container-content--after" list-footer="getFeatureMap('list')"></footer>
 </div>
