--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -1,11 +1,15 @@
-<div class="container-content--outer" ng-if="isFeatureActive('lists')" drawer-handle="left">
+<div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container>
   <section class="container-content" scroll-to>
     <div list>
-      <h2>archived</h2>
-      <div ng-repeat="archivedList in archivedLists" ng-bind="archivedList.title"></div>
+      <h2>active</h2>
+      <div class="row animate-list-item-leave"
+      ng-repeat="archivedList in archivedLists | limitTo: currentListLimitTo"
+      list-item="archivedLists.length" ng-include="'static/app/lists/listListItem.html'"></div>
+
+      <div list-item-add="{}" list-item-add-save="saveAndArchiveList(newItem)"
+      ng-include="'static/app/lists/listListItemAdd.html'"></div>
+
     </div>
   </section>
-  <footer class="container-content--after" list-footer="getFeatureMap('lists')"
-  list-footer-add-item="addList({})"></footer>
+  <footer class="container-content--after" list-footer="getFeatureMap('lists')"></footer>
 </div>
-
