Removed traces of archive feature

--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -26,14 +26,11 @@
           </li>
         </ul>
       </li>
-      <li class="last-feature">
-        <a href class="feature-link" ng-class="getFeatureClass('archive')" ng-click="gotoFeature('archive')">archive</a>
-      </li>
       <li ng-if="isAdmin()">
         <a href ng-class="getFeatureClass('admin')" ng-click="gotoFeature('admin')">admin</a>
       </li>
       <li class="menu-last">
-        <a href ng-class="getFeatureClass('settings')" ng-click="gotoFeature('settings')">settings</a>
+        <a href ng-class="getFeatureClass('trash')" ng-click="gotoFeature('trash')">trash</a>
       </li>
     </ul>
   </div>
