Added scrolling to top element on save for top-ordered lists, beginnings of list heading toggle completed

--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -1,5 +1,5 @@
 <div class="group-mixed">
-  <a href class="group-mixed--middle" swiper-click="openEditor('note', note)">
+  <a href class="group-mixed--middle" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
     <span class="text-link" ng-bind="note.title"></span>
   </a>
   <span class="text-teaser" ng-bind="getNoteContentTeaser(note)"></span>
