Removed checkbox-checking animation as a normal input[:checked] animation is needed anyway

--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed animate-checkbox-checking">
+<div class="group-mixed">
 
   <div class="group-mixed--left">
     <input type="checkbox" ng-model="task.transientProperties.completed"
