--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -1,4 +1,4 @@
-<form role="form" class="group-mixed swiper-no-swiping animate-checkbox-checking"
+<form role="form" class="group-mixed swiper-no-swiping"
 ng-submit="callAndExit(saveTask, newItem)"
 data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
 editable-field-container-clicked-elsewhere="clickedElsewhere()">
