Refactored editor into multiple smaller pieces to increase maintainability.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -9,7 +9,7 @@
         <div class="group-mixed--middle">
           <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
           editable-field placeholder="add item..." maxlength="128"
-          auto-focus="registerAddItemCallbacks(focus, blur)">
+          focusable="registerAddItemCallbacks(focus, blur)">
           </textarea>
         </div>
         <div class="group-mixed--right">
