--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,111 +1,13 @@
-<div id="editor" class="container-editor" ng-controller="EditorController" drawer="right" vertical-resize="editor">
-  <div ng-if="editorVisible" class="container-fluid">
-    <header class="container-titlebar">
-      <div class="container-titlebar--inner">
-
-        <div class="group-symmetrical row">
-          <div class="group-symmetrical--left">
-            <a href class="link-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endEdit()" ng-bind="saveOnClose ? 'save' : 'back'"></a>
-          </div>
-          <div class="group-symmetrical--right">
-            <a href ng-click="deleteItemInEdit()">delete</a>
-          </div>
-        </div>
-
-        <form role="form" class="group-mixed" ng-submit="saveItemInEdit()" autocapitalize="none" autocorrect="off">
-          <div ng-if="itemTitleHasActionButton" class="group-mixed--left">
-            <input type="checkbox" ng-click="clickCompleteTaskInEdit()" ng-checked="task.transientProperties.completed" ng-model="task.transientProperties.completed" icon-checkbox="editorTitlebarCheckbox" />
-          </div>
-          <div class="group-mixed--middle">
-            <textarea type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" auto-focus="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
-          </div>
-          <div ng-if="titlebarHasText()" class="group-mixed--right">
-            <button type="button" class="btn-clear" ng-click="clearTitlebarText()"></button>
-          </div>
-        </form>
-
-        <div ng-if="editorType === 'item'" class="group-btn row">
-          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('inbox')" ng-click="setItemEditorTabActive('inbox')">
-            <span class="text-btn">inbox</span>
-          </button>
-          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('task')" ng-click="setItemEditorTabActive('task')">
-            <span class="text-btn">task</span>
-          </button>
-          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('note')" ng-click="setItemEditorTabActive('note')">
-            <span class="text-btn">note</span>
-          </button>
-          <button type="button" class="btn-tab" ng-disabled="isItemEditorTabActive('list')" ng-click="setItemEditorTabActive('list')">
-            <span class="text-btn">list</span>
-          </button>
-        </div>
-      </div>
-    </header>
-
-    <div ng-if="!editorHasSwiper" class="container-fluid--inner" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}">
-      <div class="container-content" drawer-override-aisle="right">
-      </div>
-      <div class="container-content--after" ng-style="{height: getOverrideEditorFooterHeight()}">footer</div>
-    </div>
-
-    <div ng-if="editorHasSwiper" class="swiper-container container-fluid--inner" ng-style="{'padding-bottom': getOverrideEditorFooterHeight()}" swiper-container="{{editorType}}" swiper-type="main" expected-slides="2">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide" swiper-slide="{{editorType}}/basic" slide-index="0">
-
-          <div ng-if="editorType === 'task'" class="container-content" drawer-override-aisle="right">
-
-            <div ng-if="!calendarOpen" class="row animate-calendar" ng-click="openCalendar()" ng-bind="task.transientProperties.date ? (task.transientProperties.date | date:'EEE MMM d y' | lowercase) : 'select date'"></div>
-            <div ng-if="calendarOpen" class="row swiper-no-swiping animate-calendar" editable-field-container="auto" editable-field-container-clicked-elsewhere="closeCalendar()" data-snap-ignore="true">
-              <div calendar="getCalendarStartingDate(task)" calendar-return-date="closeCalendarAndCall(setTaskDate, task, date)" calendar-set-default-date="true" calendar-bound="false" >
-                <button ng-if="task.transientProperties.date" type="button" class="btn-clear pikaday-clear" ng-click="closeCalendarAndCall(clearTransientDate, task)"></button>
-              </div>
-            </div>
-
-            <div lists-select-options>
-              <select ng-if="!addNewListVisible" class="select-list-visible-animation row" ng-model="task.transientProperties.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions">
-                <option value="">select list...</option>
-              </select>
-              <div ng-if="addNewListVisible" class="group-mixed select-list-visible-animation">
-                <div class="group-mixed--middle">
-                  <input type="text" ng-model="newList.title" placeholder="add list..."/>
-                </div>
-                <div class="group-mixed--right">
-                  <a href class="group-mixed--right font-smallest add-new-list-item-cancel" ng-click="setAddNewListHidden()">cancel</a>
-                </div>
-              </div>
-            </div>
-            <textarea class="row" ng-model="task.transientProperties.description" msd-elastic placeholder="description..." maxlength="1024"></textarea>
-
-          </div>
-
-          <footer class="container-content--after editor-footer" editor-footer>
-            <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-              <a href ng-if="task.transientProperties.date" class="group-symmetrical--middle" ng-click="toggleExpand()">
-                <span>later</span>
-              </a>
-              <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right">
-                <span class="link-navigation-forward">advanced</span>
-              </a>
-            </nav>
-            <div ng-if="footerExpanded" later="callAndSaveLater(toggleExpand, date)" editable-field-container="auto" editable-field-container-clicked-elsewhere="toggleExpand()"></div>
-          </footer>
-
-        </div>
-
-        <div class="swiper-slide" swiper-slide="{{editorType}}/advanced" slide-index="1">
-          <div ng-if="editorType === 'task'" class="container-content">
-            <select ng-show="contexts.length" ng-model="task.transientProperties.context" ng-options="context.uuid as context.title for context in contexts">
-              <option value="">select context...</option>
-            </select>
-            <select ng-if="task.transientProperties.date" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes">
-              <option value="">select repeating...</option>
-            </select>
-            <input type="text" ng-model="task.link" placeholder="url...">
-          </div>
-          <div class="container-content--after" ng-style="{height: getOverrideEditorFooterHeight(), bottom: -getOverrideEditorFooterHeight()}">footer</div>
-        </div>
-      </div>
-    </div>
-
+<div id="editor" class="container-editor" ng-controller="EditorController" drawer="right"
+vertical-resize="editor" ng-switch="editorType">
+  <div ng-if="editorVisible" ng-switch-when="task" class="container-editor--inner" ng-init="task = getItemInEdit()">
+    <div ng-include="'static/app/tasks/taskEditor.html'" include-replace></div>
+  </div>
+  <div ng-if="editorVisible" ng-switch-when="note" class="container-editor--inner" ng-init="note = getItemInEdit()">
+    <div ng-include="'static/app/notes/noteEditor.html'" include-replace></div>
+  </div>
+  <div ng-if="editorVisible" ng-switch-when="omnibar" class="container-editor--inner">
+    <div ng-include="'static/app/main/omnibarEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" toaster="override"></div>
 </div>
