--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -9,7 +9,7 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
   <div class="group-mixed--middle">
     <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
     editable-field placeholder="add task..." maxlength="128"
-    auto-focus="registerAddItemCallbacks(focus, blur)">
+    focusable="registerAddItemCallbacks(focus, blur)">
     </textarea>
   </div>
   <div class="group-mixed--right">
