--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -1,8 +1,14 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container drawer-handle="left">
   <section class="container-content" list="top">
-    <div class="group-heading">
-      <h2>recent</h2>
-      <button ng-if="true" ng-click="">show</button>
+    <div class="group-mixed">
+      <div class="group-mixed--middle">
+        <h2>recent</h2>
+      </div>
+      <div class="group-mixed--right">
+        <button class="btn animate-btn-completed" ng-if="containsCompleted(tasks)" ng-click="">
+          <span class="text-toggle-completed"></span>
+        </button>
+      </div>
     </div>
     <div list-item-add="{transientProperties: {completed: false}}" list-item-add-save="saveTask(newItem)"
     ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
