--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -2,7 +2,7 @@
   <section class="container-content" scroll-to>
     <div list>
       <h2>active</h2>
-      <div class="row animate-list-item-leave"
+      <div class="animate-list-item-leave"
       ng-repeat="list in lists | limitTo: currentListLimitTo"
       list-item="lists.length" ng-include="'static/app/lists/listListItem.html'"></div>
 
