--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -18,7 +18,7 @@
       </form>
     </div>
 
-    <div class="row animate-list-item-leave"
+    <div class="animate-list-item-leave"
     ng-repeat="item in items | orderBy:'created':true | limitTo: currentListLimitTo"
     list-item="items.length">
       <div class="group-mixed">
