--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -97,6 +97,7 @@
   <script src="static/app/tasks/TasksController.js"></script>
   <script src="static/app/tasks/TaskEditorController.js"></script>
   <script src="static/app/tasks/TasksService.js"></script>
+  <script src="static/app/tasks/taskListCompletedDirective.js"></script>
   <script src="static/app/tasks/tasksByDateFilter.js"></script>
 
   <script src="static/app/notes/NoteEditorController.js"></script>
