--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -1,7 +1,11 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
   <section class="container-content" list="top" list-open="openEditor('note', {})">
-    <h2>recent</h2>
-    <div class="row animate-list-item-leave"
+    <div class="group-mixed">
+      <div class="group-mixed--middle">
+        <h2>recent</h2>
+      </div>
+    </div>
+    <div class="animate-list-item-leave"
     ng-repeat="note in allNotes | orderBy:'modified':true | limitTo: currentListLimitTo"
     list-item="allNotes.length" ng-include="'static/app/notes/noteListItem.html'"
     ng-style="{maxHeight: getNoteListItemHeight(note)}"></div>
